cog_utils: Add export error message in xml Fix #1480: https://redmine.coopengo.com/issues/1480 http://rietveld.coopengo.com/7740001

--- a/modules/account_payment_cog/locale/fr_FR.po
+++ b/modules/account_payment_cog/locale/fr_FR.po
@@ -7,110 +7,20 @@ msgid "Action must be unique for a journal and a reject reason"
 msgstr "Action doit être unique pour un journal et un motif de rejet donnés"
 
 msgctxt "error:account.payment.journal.failure_action:"
-msgid "Cannot import : no object %s with functional key: \"%s\" were found."
-msgstr ""
-"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
-"\"%s\"."
-
-msgctxt "error:account.payment.journal.failure_action:"
-msgid ""
-"Cannot import : the following objects:\n"
-"%s\n"
-"share the same functional key:\n"
-"\"%s\"."
-msgstr ""
-"Impossible d'importer : Les objets suivants :\n"
-"%s\n"
-"partagent la même clé fonctionnelle :\n"
-"\"%s\"."
-
-msgctxt "error:account.payment.journal.failure_action:"
 msgid "Unknown reject code : %s"
 msgstr "Motif de rejet inconnu : %s"
 
 msgctxt "error:account.payment.journal.reject_reason:"
-msgid "Cannot import : no object %s with functional key: \"%s\" were found."
-msgstr ""
-"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
-"\"%s\"."
-
-msgctxt "error:account.payment.journal.reject_reason:"
-msgid ""
-"Cannot import : the following objects:\n"
-"%s\n"
-"share the same functional key:\n"
-"\"%s\"."
-msgstr ""
-"Impossible d'importer : Les objets suivants :\n"
-"%s\n"
-"partagent la même clé fonctionnelle :\n"
-"\"%s\"."
-
-msgctxt "error:account.payment.journal.reject_reason:"
 msgid "The code must be unique"
 msgstr "Le code doit être unique"
-
-msgctxt "error:account.payment.journal:"
-msgid "Cannot import : no object %s with functional key: \"%s\" were found."
-msgstr ""
-"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
-"\"%s\"."
-
-msgctxt "error:account.payment.journal:"
-msgid ""
-"Cannot import : the following objects:\n"
-"%s\n"
-"share the same functional key:\n"
-"\"%s\"."
-msgstr ""
-"Impossible d'importer : Les objets suivants :\n"
-"%s\n"
-"partagent la même clé fonctionnelle :\n"
-"\"%s\"."
 
 msgctxt "error:account.payment:"
 msgid "Action \"%s\" not found for payment %s"
 msgstr "Action \"%s\" non trouvé pour le paiement %s"
 
 msgctxt "error:account.payment:"
-msgid "Cannot import : no object %s with functional key: \"%s\" were found."
-msgstr ""
-"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
-"\"%s\"."
-
-msgctxt "error:account.payment:"
-msgid ""
-"Cannot import : the following objects:\n"
-"%s\n"
-"share the same functional key:\n"
-"\"%s\"."
-msgstr ""
-"Impossible d'importer : Les objets suivants :\n"
-"%s\n"
-"partagent la même clé fonctionnelle :\n"
-"\"%s\"."
-
-msgctxt "error:account.payment:"
 msgid "Payments blocked for party %s"
 msgstr "Paiements bloqués pour l'acteur %s"
-
-msgctxt "error:party.synthesis.menu.payment:"
-msgid "Cannot import : no object %s with functional key: \"%s\" were found."
-msgstr ""
-"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
-"\"%s\"."
-
-msgctxt "error:party.synthesis.menu.payment:"
-msgid ""
-"Cannot import : the following objects:\n"
-"%s\n"
-"share the same functional key:\n"
-"\"%s\"."
-msgstr ""
-"Impossible d'importer : Les objets suivants :\n"
-"%s\n"
-"partagent la même clé fonctionnelle :\n"
-"\"%s\"."
 
 msgctxt "field:account.configuration,direct_debit_journal:"
 msgid "Direct Debit Journal"
@@ -123,6 +33,10 @@ msgstr "Journal des frais de rejet"
 msgctxt "field:account.move.line,payment_date:"
 msgid "Payment Date"
 msgstr "Date de paiement"
+
+msgctxt "field:account.move.line,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:account.payment,xml_id:"
 msgid "XML Id"
