--- a/modules/contract_set/locale/fr_FR.po
+++ b/modules/contract_set/locale/fr_FR.po
@@ -2,42 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:contract.set.decline.select_reason:"
-msgid "Cannot import : no object %s with functional key: \"%s\" were found."
-msgstr ""
-"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
-"\"%s\"."
-
-msgctxt "error:contract.set.decline.select_reason:"
-msgid ""
-"Cannot import : the following objects:\n"
-"%s\n"
-"share the same functional key:\n"
-"\"%s\"."
-msgstr ""
-"Impossible d'importer : Les objets suivants :\n"
-"%s\n"
-"partagent la même clé fonctionnelle :\n"
-"\"%s\"."
-
-msgctxt "error:contract.set:"
-msgid "Cannot import : no object %s with functional key: \"%s\" were found."
-msgstr ""
-"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
-"\"%s\"."
-
-msgctxt "error:contract.set:"
-msgid ""
-"Cannot import : the following objects:\n"
-"%s\n"
-"share the same functional key:\n"
-"\"%s\"."
-msgstr ""
-"Impossible d'importer : Les objets suivants :\n"
-"%s\n"
-"partagent la même clé fonctionnelle :\n"
-"\"%s\"."
-
 msgctxt "error:contract.set:"
 msgid "The contract set number must be unique."
 msgstr "Le numéro de l'ensemble de contrat sdoit être unique."
@@ -82,6 +46,10 @@ msgctxt "field:contract.set,rec_name:"
 msgid "Name"
 msgstr "Numéro"
 
+msgctxt "field:contract.set,status:"
+msgid "Status"
+msgstr "Statut"
+
 msgctxt "field:contract.set,subscribers:"
 msgid "Subscribers"
 msgstr "Souscripteurs"
@@ -102,18 +70,6 @@ msgctxt "field:contract.set.decline.select_reason,contract_set:"
 msgid "Contract Set"
 msgstr "Ensemble de contrats"
 
-msgctxt "field:contract.set.decline.select_reason,create_date:"
-msgid "Create Date"
-msgstr "Date de Création"
-
-msgctxt "field:contract.set.decline.select_reason,create_date_:"
-msgid "Creation date"
-msgstr "Date de Création"
-
-msgctxt "field:contract.set.decline.select_reason,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
 msgctxt "field:contract.set.decline.select_reason,id:"
 msgid "ID"
 msgstr "ID"
@@ -121,22 +77,6 @@ msgstr "ID"
 msgctxt "field:contract.set.decline.select_reason,reason:"
 msgid "Reason"
 msgstr "Raison"
-
-msgctxt "field:contract.set.decline.select_reason,rec_name:"
-msgid "Name"
-msgstr "Numéro"
-
-msgctxt "field:contract.set.decline.select_reason,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:contract.set.decline.select_reason,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
-msgctxt "field:contract.set.decline.select_reason,xml_id:"
-msgid "XML Id"
-msgstr "Identifiant XML"
 
 msgctxt "model:contract.set,name:"
 msgid "Contract Set"
@@ -157,6 +97,30 @@ msgstr "Décliner l'ensemble de contrats"
 msgctxt "model:ir.ui.menu,name:menu_contract_set"
 msgid "Contract Sets"
 msgstr "Ensembles de contrats"
+
+msgctxt "selection:contract.set,status:"
+msgid "Active"
+msgstr "Active"
+
+msgctxt "selection:contract.set,status:"
+msgid "Declined"
+msgstr "Décliné"
+
+msgctxt "selection:contract.set,status:"
+msgid "Hold"
+msgstr "Suspendre"
+
+msgctxt "selection:contract.set,status:"
+msgid "Quote"
+msgstr "Devis"
+
+msgctxt "selection:contract.set,status:"
+msgid "Terminated"
+msgstr "Terminé"
+
+msgctxt "selection:contract.set,status:"
+msgid "Void"
+msgstr "Sans Effet"
 
 msgctxt "view:contract.set.decline.select_reason:"
 msgid "Select Declination Reason"
