--- a/modules/commission_insurance/CHANGELOG
+++ b/modules/commission_insurance/CHANGELOG
@@ -1,3 +1,5 @@
+* Automatic payment generation for broker based on configuration
+
 Version 1.3 - 2015-01-22
 * Add temporal versioning to agents
 * Add a wizard to mass create agents
